<!--
  ~
  ~ Copyright 2016 Manish Patel (MD)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">MyOwnTwitter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_timeline">HomeTimeline</string>
    <string name="action_timeline">MyTimeline</string>
    <string name="action_retweet">MyRetweets</string>
    <string name="action_tweet">Post Tweet</string>
    <string name="action_aboutus">AboutUs</string>
    <string name="action_profile">MyProfile</string>
    <string name="action_logout">Logout</string>


    <string name="title_activity_login">Twitter Login</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_embedded_tweets">EmbeddedTweetsActivity</string>
    <string name="empty">Empty</string>
    <string name="no_internet_connection">You are not connected to the Internet</string>
    <string name="no_internet_connection_mobile_out_of_credit">You are not connected to the Internet. It is likely that you have run out of the credit on your phone.</string>
    <string name="no_internet_connection_restart_app">You are not connected to the Internet. Please go online then start the app again.</string>
    <string name="error_network_http_error">HTTP error. Status code: %1$s</string>
    <string name="error_unknown">Unknown error</string>
    <string name="my_teweets">MyTweets</string>

    <string name="release_notes">r. 14 May 2016</string>

</resources>
