<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2016 Manish Patel (MD)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_timeline"
        android:orderInCategory="101"
        android:title="@string/action_timeline"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_retweet"
        android:orderInCategory="102"
        android:title="@string/action_retweet"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_tweet"
        android:orderInCategory="103"
        android:title="@string/action_tweet"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="104"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="105"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lic"
        android:orderInCategory="106"
        android:title="Licenses"
        app:showAsAction="never" />

</menu>
